Bug: text overflows get broken into multiple lines

--- a/css/globals/formatting.less
+++ b/css/globals/formatting.less
@@ -22,6 +22,12 @@
   hr + * {
     margin-top: 0 !important;
   }
+  p, a {
+    word-break: break-word;
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    hyphens: auto;
+  }
   p {
     .cf;
     color: @color-medium-well;
@@ -114,7 +120,6 @@
     }
   }
   blockquote {
-
     .font-s3;
     .type-secondary;
     border-left: 3px solid @color-primary;
